# agent-chat

./: .gitignore  README.md  pyproject.toml
src/agent_chat/: __init__.py  controller.py  main.py  model.py  view.py
src/agent_chat/controllers/: __init__.py  chat_controller.py
src/agent_chat/models/: __init__.py  chat_bot.py  nlp.py
src/agent_chat/views/: __init__.py  chat_view.py  config_view.py  view.py
storage/: intents.json
tests/: test_controller.py  test_model.py  test_nlp.py  test_training.py
