[project]
name = "agent-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "ismaelxyz",email = "ismaelbeli.com@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet (>=0.28.3,<0.29.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "keras (>=3.11.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "agent_chat", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "agent_chat.main:main"
